---------------------------------------------------------------------------------------------------
Version: 2.2.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.2.3
Date: 2025-06-29
  Changes:
    - Fixed the changelog.
---------------------------------------------------------------------------------------------------
Version: 2.2.2
Date: 2025-06-29
  Changes:
    - No changes! Yours truly hit upload by mistake.
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2025-06-29
  Bugfixes:
    - Attempted fix for a rare startup crash.
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2025-06-12
  Changes:
    - Reverted the triangle inequality filtering threshold from 5% to 0% as this was found to remove too many space routes.
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2025-06-11
  Changes:
    - Connections are flipped back-to-front if that would make the PlanetsLib tiers in the direction of the route increasing. (For example, Nauvis–Aquilo is now preferred to Aquilo–Nauvis.)
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2025-06-11
  Changes:
    - Triangle inequality filtering is now more strict. Edges are removed post-generation if they reduce the shortest route between 'from' and 'to' by no more than 5%.
    - Fixed a rounding error in the triangle inequality filtering calculation.
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025-06-06
  Changes: