@@ -1,19 +1,3 @@
-for _, prototype in pairs({ "space-location", "planet" }) do
-	for _, loc in pairs(data.raw[prototype]) do
-		if loc.subgroup and loc.subgroup == "satellites" then
-			loc.redrawn_connections_exclude = true
-		elseif loc.hidden then
-			loc.redrawn_connections_exclude = true
-		end
-	end
-end
-
-for _, connection in pairs(data.raw["space-connection"]) do
-	if connection.hidden then
-		connection.redrawn_connections_keep = true
-	end
-end
-
 -- == Vanilla ==--
 
 if data.raw["space-location"]["shattered-planet"] then
